shortening abstract on last Open Mic talk

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -51,7 +51,7 @@
             <tr>
                 <td class="time">Talk IV</td>
                 <td class="title"><a href="https://twitter.com/Nervetattoo">Raymond Julin</a></td>
-                <td class="additional">What the hell happened to hacking?<br> The landscape of javascript hacking has changed. How has this changed the meta stuff you go through to set up a new open source project? I'll cheekily go through the somewhat crazy steps that can exist in fully meta defining/configuring your project, and make a point, that while all these helping tools are actually helping, it does with no doubt appear batshit crazy seen a little from the outside.</td>
+                <td class="additional">What the hell happened to hacking?</td>
             </tr>
             <tr>
                 <td class="time">Talk V</td>
