Typos and title change

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -40,8 +40,8 @@
             </tr>
             <tr>
                 <td class="time">Talk III</td>
-                <td class="title"><a href="https://twitter.com/sindresorhus">Sindre Sørhus</a></td>
-                <td class="additional">Getting dirty with grunt. Basically; grunt - what, how and why. </td>
+                <td class="title"><a href="https://twitter.com/sindresorhus">Sindre Sorhus</a></td>
+                <td class="additional">Getting dirty with grunt</td>
             </tr>
             <tr>
                 <td class="time">Break</td>
@@ -255,7 +255,7 @@
             <tr>
                 <td class="time">16:00</td>
                 <td class="title" colspan="2">Optional beer drinking in the <a href="https://www.google.com/search?q=Mesh+Caf%C3%A9&oq=Mesh+Caf%C3%A9&aqs=chrome.0.57j0l3.603j0&sourceid=chrome&ie=UTF-8">Mesh Café</a></td>
-            </tr>            
+            </tr>
             <!--tr>
                 <td colspan="3">Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">Firefox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
             </tr-->
