adding oleg and updating the openmic text

--- a/views/openmic.ejs
+++ b/views/openmic.ejs
@@ -18,10 +18,9 @@
         <p>The Open Mic Night takes place at
           <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a>
           which is just next door to the <a href="/location">conference venue</a>. At the Open
-          Mic Night you as an attendee will be able to get on the
-          stage and do a lightning talk on any topic you want.
+          Mic Night you will be able to get on the stage and do a lightning talk on any topic you want.
         </p>
-        <p>At Open Mic Night, attendants and speakers get to hang out
+        <p>At Open Mic Night, you get to hang out
           and listen to some briliant talks by some of the amazing
           new talent. One of them is coming back as a speaker at
           this years conference. This is exactly why we hosted the
@@ -31,10 +30,10 @@
         <ul>
             <li>Open Mic Night is a small pre-party</li>
             <li>Batches of 10 minute lightning talks from our Call For Papers</li>
-            <li>Hang out with speakers and attendants whom you'll be spending the next couple of days with</li>
+            <li>Hang out with speakers, attendants and other members of our community</li>
         </ul>
 
-        <p><strong>Dear attendee: this is your night!</strong></p>
+        <p><strong>This is your night!</strong></p>
 
         <p>
           If you would like to have a go on stage, you are more than
