--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -55,8 +55,8 @@
             </tr>
             <tr>
                 <td class="time">Talk V</td>
-                <td class="title">tba</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="https://twitter.com/olegpodsechin">Oleg Podsechin</a></td>
+                <td class="additional">A quick talk on <a href="https://starthq.com/">Start HQ</a></td>
             </tr>
             <tr>
                 <td class="time">Talk VI</td>
