changed title for the pre-party on schedule

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -21,7 +21,7 @@
         <a name="openmic"></a>
         <table class="schedule" id="openmic">
             <tr>
-                <th colspan="3">22nd of May - Pre party</th>
+                <th colspan="3">22nd of May - Open Mic Night</th>
             </tr>
             <tr>
                 <td class="time">20:00</td>
@@ -63,6 +63,7 @@
                 <td class="title">tba</td>
                 <td class="additional"> </td>
             </tr>
+
         </table>
 
         <a name="dayI"></a>
