--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -128,10 +128,10 @@
             </a>
         </article>
 
-        <article class="slot row_d tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_d">
+            <a href="/speakers/#brian">
+                <div class="img" style="background-image: url(/gfx/front_brian.jpg);"></div>
+                <h2>Brian Ford</h2>
             </a>
         </article>
 
