--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -60,10 +60,29 @@
             </tr>
             <tr>
                 <td class="time">Talk VI</td>
+                <td class="title"><a href="https://twitter.com/augustl">August Lilleaas</a></td>
+                <td class="additional">Truly concurrent user interfaces</td>
+            </tr>
+            <tr>
+                <td class="time">Break</td>
+                <td class="title"> </td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk VII</td>
                 <td class="title">tba</td>
                 <td class="additional"> </td>
             </tr>
-
+            <tr>
+                <td class="time">Talk VIII</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk IX</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
         </table>
 
         <a name="dayI"></a>
@@ -195,7 +214,7 @@
             </tr>
             <tr>
                 <td class="time">15:30</td>
-                <td class="title">tba</td>
+                <td class="title"><a href="/speakers/#brian">Brian Ford</a></td>
                 <td class="additional">tba</td>
             </tr>
             <tr>
