--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -35,6 +35,18 @@
 
         <div class="separator"></div>
 
+        <a name="brian"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Brian Ford" src="../gfx/speaker_brian.jpg">
+            <h2>Brian Ford</h2>
+            <p><a href="https://twitter.com/briantford">Brian Ford</a> has been programming for as long as he can remember and involved in web technology for nearly 8 years. He is not only a member of the <a href="http://angularjs.org/">AngularJS</a> and <a href="http://yeoman.io/">Yeoman core teams</a>, but also <a href="http://briantford.com/blog.rss">blogs extensively</a>. Brian is currently finishing up his degree at the University of Michigan, after which he will continue working on the Angular team at Google.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
+        </div>
+
+        <div class="separator"></div>
+
         <a name="bodil"></a>
         <div class="speaker">
             <img class="imageFrame" height="140" width="140" alt="Bodil Stokke" src="../gfx/speaker_bodil.jpg">
