Added Dominics abstract

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -133,7 +133,7 @@
             <tr>
                 <td class="time">14:15</td>
                 <td class="title"><a href="/speakers/#dominic">Dominic Tarr</a></td>
-                <td class="additional">tba</td>
+                <td class="additional">Streams, Events, and Data</td>
             </tr>
             <tr>
                 <td class="time">15:00</td>
