--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -83,8 +83,9 @@
             <p>Dominic is a self-styled "Mad Scientist" of javascript, most well known for his work on <a href="https://github.com/dominictarr/through">streams</a> and real-time <a href="https://github.com/dominictarr/scuttlebutt">distributed systems</a>, but is now getting into javascript database development with <a href="https://github.com/dominictarr/level-sublevel">leveldb</a>.</p>
             <p>Dominic is happily being fed by irish development house / mad-science laboratory, nearform.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>Streams, Events, and Data</h3>
+            <p>A stream is a structure that allows you to represent the time-based aspects of your program. You can use streams to get closer to the bound of performance by acting as soon as possible, processing incrementally, or staying within resource limits my slowing down when necessary.</p>
+            <p>But streams are not just about performance - they are also an abstraction that can closely map how data moves through your program - in the long term this is even more important!</p>
         </div>
 
         <div class="separator"></div>
