Added Brians abstract

--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -41,8 +41,9 @@
             <h2>Brian Ford</h2>
             <p><a href="https://twitter.com/briantford">Brian Ford</a> has been programming for as long as he can remember and involved in web technology for nearly 8 years. He is not only a member of the <a href="http://angularjs.org/">AngularJS</a> and <a href="http://yeoman.io/">Yeoman core teams</a>, but also <a href="http://briantford.com/blog.rss">blogs extensively</a>. Brian is currently finishing up his degree at the University of Michigan, after which he will continue working on the Angular team at Google.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>Improving Your Workflow with Yeoman</h3>
+            <p>Writing a web application used to be tremendously difficult. Within the last few years, things have improved significantly. Libraries like jQuery, Moderizr, and HTML5 Boilerplate help eliminate browser inconsistencies and promote best practices. Frameworks like AngularJS, Backbone.js, and Ember.js help manage application lifecycle and allow developers to work at a higher level of abstraction.</p>
+            <p>Still, there's a lot of room to grow. For instance, bringing all of these different pieces together and configuring them is daunting for even an experienced developer. <a href="http://yeoman.io/">Yeoman</a> can help solve this issue and fill a vital gap in the web development workflow. This talk will cover using Yeoman to scaffold a web application with an eye for improving productivity and eliminating common web development annoyances.</p>
         </div>
 
         <div class="separator"></div>
