added parkerwightman to open mic schedule

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -70,8 +70,8 @@
             </tr>
             <tr>
                 <td class="time">Talk VII</td>
-                <td class="title">tba</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="http://twitter.com/parkerwightman">Parker Wightman</a></td>
+                <td class="additional">API Design, Testing, and Clients</td>
             </tr>
             <tr>
                 <td class="time">Talk VIII</td>
