--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -215,7 +215,7 @@
             <tr>
                 <td class="time">15:30</td>
                 <td class="title"><a href="/speakers/#brian">Brian Ford</a></td>
-                <td class="additional">tba</td>
+                <td class="additional">Improving Your Workflow with Yeoman</td>
             </tr>
             <tr>
                 <td class="time">16:15</td>
