--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -17,40 +17,141 @@
 
         <h1>Roadbook</h1>
         <p>
-            This is the speakers roadbook. It contains all important information you as a speaker might want to know before, buring and after your stay at Web Rebels 2013. Please bookmark this page and please do not share the url to this page on Twitter or simmilar.
+            This is the speaker's roadbook. It contains all the important information you as a speaker might want to know before, during and after your stay at Web Rebels 2013. Please bookmark this page and please do not share the url of this page on Twitter or elsewhere.
         </p>
 
         <div class="separator"></div>
 
+        <a name="contact_information"></a>
         <h2>Contact information</h2>
-        <p>Info</p>
+        <p>Trygve Lie is your speaker contact during the whole conference. If you have any questions or problems please talk to him. You can also contact any of the other organisers at any time.</p>
+
+        <p>The organisers can be reached at <a href="mailto:kontor@webrebels.org">kontor@webrebels.org</a>.</p>
+
+        <p>The Web Rebels organisers are:</p>
+        <a name="espen"></a>
+        <div class="organizer">
+            <img src="../gfx/org_espen.jpg">
+            <h3>Espen Dalløkken</h3>
+            <p>Mobile: +47 41 52 88 62 - Mail: <a href="mailto:leftie.friele@gmail.com">leftie.friele@gmail.com</a> - Twitter: <a href="https://twitter.com/leftieFriele">@leftieFriele</a></p>
+        </div>
+        <a name="gregers"></a>
+        <div class="organizer">
+            <img src="../gfx/org_gregers.jpg">
+            <h3>Gregers Gram Rygg</h3>
+            <p>Mobile: +47 92 25 03 00 - Mail: <a href="mailto:gregersrygg@gmail.com">gregersrygg@gmail.com</a> - Twitter: <a href="https://twitter.com/gregersrygg">@gregersrygg</a></p>
+        </div>
+        <a name="trygve"></a>
+        <div class="organizer">
+            <img src="../gfx/org_trygve.jpg">
+            <h3>Trygve Lie</h3>
+            <p>Mobile: +47 95 25 22 48 - Mail: <a href="mailto:post@trygve-lie.com">post@trygve-lie.com</a> - Twitter: <a href="https://twitter.com/trygve_lie">@trygve_lie</a></p>
+        </div>
+        <a name="sveinung"></a>
+        <div class="organizer">
+            <img src="../gfx/org_sveinung.jpg">
+            <h3>Sveinung Røsaker</h3>
+            <p>Mobile: +47 47 46 26 78 - Mail: <a href="mailto:sveinung.rosaker@gmail.com">sveinung.rosaker@gmail.com</a> - Twitter: <a href="https://twitter.com/sveisvei">@sveisvei</a></p>
+        </div>
+        <a name="bodil"></a>
+        <div class="organizer">
+            <img src="../gfx/speaker_bodil.jpg">
+            <h3>Bodil Stokke</h3>
+            <p>Mobile: +47 97 18 25 24 - Mail: <a href="mailto:bodil@bodil.tv">bodil@bodil.tv</a> - Twitter: <a href="https://twitter.com/bodil">@bodil</a></p>
+        </div>
 
         <div class="separator"></div>
 
-        <h2>Travel to and from</h2>
-        <p>Info</p>
+        <a name="travel_to_and_from_the_airport"></a>
+        <h2>Travel to and from the airport</h2>
+        <p>If you are flying into Oslo you will arrive at and depart from <a href="http://www.osl.no/en/osl">Oslo Airport Gardermoen</a> (OSL). Between the airport and Oslo Central Station (nicknamed Oslo S) there is a high speed airport shuttle, named Flytoget, running every 10 minute. The travel time is ~20 minutes. Departures can be <a href="http://www.flytoget.no/eng/">checked here</a>.</p>
+
+        <p>Upon arrival, please keep the airport shuttle ticket you purchase (ticket machines take credit cards) and give it to your speaker contact, <a href="#trygve">Trygve Lie</a>, at any time during the conference and we will refund it in cash! At the conference hotel you will be given an airport shuttle ticket for your return trip.</p>
+
+        <p>If your travel is delayed or if you have any problems during your travel, please let us know.</p>
 
         <div class="separator"></div>
 
-        <h2>The hotel</h2>
+        <a name="the_conference_hotel"></a>
+        <h2>The conference hotel</h2>
         <p>Your hotel is the <a href="http://www.scandichotels.com/Hotels/Countries/Norway/Oslo/Hotels/Vulkan/">Scandic Vulcan Hotel</a>.</p>
-        <p>The address to the hotel is: Maridalsveien 13 A, 0175 Oslo</p>
-        <p>The phone number to the hotel is: +47 21 05 71 00</p>
+        <p>The address of the hotel is: Maridalsveien 13 A, 0175 Oslo and the phone number of the hotel is: +47 21 05 71 00.</p>
         <p>Your room is booked in your name.</p>
 
         <div class="separator"></div>
 
-        <h2>The venue</h2>
-        <p>Info</p>
+        <a name="getting_to_the_hotel"></a>
+        <h2>Getting to the hotel</h2>
+        <p>It is possible to walk to the hotel from Oslo Central Station. It is about a 20 minute walk. <a href="http://goo.gl/maps/KGEBq">This is the best and fastest walking route</a>.</p>
+
+        <p>The best way to get to the hotel is by tram and then a small walk. From Oslo Central Station you can take tram 11, 12 and 13 eastbound to Schous Plass (four stops from Oslo Central Station). At Schous Plass you can walk <a href="http://goo.gl/maps/h78NN">this short route to the hotel</a>.</p>
+        
+        <div class="separator"></div>
+
+        <a name="speaker_dinner"></a>
+        <h2>Speaker dinner</h2>
+        <p>At 18:00 on the 22nd of May there will be a speaker dinner at <a href="http://www.dognvillburger.no/">Døgnvill Bar &amp; Burger</a> where we expect you to attend. Døgnvill Bar &amp; Burger is close to the conference hotel. At the conference hotel, take the elevator to the ground floor and exit through the bar on the ground floor. Then turn right and you will find Døgnvill Bar &amp; Burger a couple of doors down on the same side as the conference hotel.</p>
+
+        <p>After the speaker dinner there will be an Open Mic night where attendees can get a small spot in the limelight at the <a href="http://vbarogbistro.no/">V Bar og Bistro</a>. This is a very informal evening with the main purpose of letting attendees try out speaking on stage and where speakers and attendees can break the ice before the conference kicks off. The V Bar og Bistro is the bar on the ground floor of the conference hotel.</p>
+
+        <p>You are encouraged to jump the stage and improvise a ~10 minutes talk ;)</p>
 
         <div class="separator"></div>
 
+        <a name="the_venue"></a>
+        <h2>The venue</h2>
+        <p>The venue is a concert venue named Fabrikken (Norwegian for Factory) and is just next door to the conference hotel. It will be possible to walk directly from the breakfast / lunch / dining area into the conference venue.</p>
+
+        <p>The venue has a medium sized leveled stage and there will be a section of medium sized tables up front and chairs put out at random behind that. There is no dedicated speaker area at the venue. At the stage you will have a small round table in standing hight and access to fresh drinking water.</p>
+
+        <div class="separator"></div>
+
+        <a name="technical"></a>
+        <h2>Technical</h2>
+        <p>The projector is a full HD 1080P projector with a 1920x1080 resolution. On stage there will be HDMI and VGA cable to connect to the projector.</p>
+
+        <p>There will be a sound engineer controlling all sound from the stage and you will be given a small wireless clip-on microphone so your hands are free. If your pressentation requires sound, please let us know before the conference starts so a cable to connect to the PA can be provided for you.</p>
+
+        <p>On stage there is also a dedicated Internet connection which will not interfere with the connection used by the attendees. This connection can be used if you need a guaranteed connection to Internet.</p>
+
+        <div class="separator"></div>
+
+        <a name="your_talk"></a>
+        <h2>Your talk</h2>
+        <p>Please make yourself familliar with the <a href="/schedule/">schedule</a> and the time for your talk. Please be by the stage about 15 minutes before it is your turn to enter the stage. There is a longer break after every second talk. Your speaker slot is 40 minutes and there is a 5 minute pause to change between speakers in those chunks. We engourage you to do a round of questions at the end of your talk so please calculate that into your time slot of 40 minutes. There will be a person with a microphone in the audience to capture attendees questions.</p>
+
+        <p>We also engourage you to put your talk online after your talk.</p>
+
+        <p>Please note that everyone taking part in the Web Rebels Conference must abide by the <a href="http://jsconf.com/codeofconduct.html">JSConf Code of Conduct</a>.</p>
+
+        <div class="separator"></div>
+
+        <a name="sign_language_interpretor"></a>
+        <h2>Sign language interpretor</h2>
+        <p>One of our attendees has requested a sign language interpretor due to hearing disabilities. During your talk there will be a sign language interpretor present on the outer left side of the stage translating your talk into sign language.</p>
+
+        <p>We know that this might not be possible for you to do, but if you are able to, its a huge help to the interpretor if you could send us a PDF copy of your slides in good time before your talk. The earlier the better. If you are able to do so, please send it to <a href="mailto:kontor@webrebels.org">kontor@webrebels.org</a> and we will make sure the interpretor get the copy as fast as possible.</p>
+
+        <div class="separator"></div>
+
+        <a name="filming_and_streaming"></a>
+        <h2>Filming and streaming</h2>
+        <p>Your talk will be filmed and published on <a href="http://vimeo.com/webrebels">our video channel at Vimeo</a> as fast as possible after the conference. All videos published will be published under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0 licence</a>. We might also stream the whole conference or parts of it. If you do not want your talk to be filmed, published or streamed, please let us know up front.</p>
+
+        <div class="separator"></div>
+
+        <a name="official_hashtag"></a>
         <h2>Official hashtag</h2>
         <p>
             We feel deeply honored if you mention us in social media. If you do, our official hashtag is: <strong>#webrebels</strong>
         </p>
 
+        <div class="separator"></div>
+
+        <a name="speaker_travel_routes"></a>
         <h2>Speaker travel routes</h2>
+        <p>This is each speaker's travel route which we know of. Some of you share flights and some of you arrive at / depart from the airport at almost the same time. Team up!</p>
+
         <table class="routes">
             <tr class="speaker">
                 <td class="name" colspan="6">David Nolen:</td>
@@ -72,9 +173,8 @@
                 <td class="to">New York, Newark Liberty International</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Mario Heiderich:</td>
@@ -96,9 +196,8 @@
                 <td class="to">Manchester</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Felix Geisendoerfer:</td>
@@ -120,9 +219,8 @@
                 <td class="to">Berlin, Schönefeld</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Garann Means:</td>
@@ -130,7 +228,7 @@
             <tr class="inbound">
                 <td class="date">21.05</td>
                 <td class="departtime">06:00</td>
-                <td class="flight">SK 6865</td>
+                <td class="flight">SK6865</td>
                 <td class="from">Austin</td>
                 <td class="arrivaltime">10:50</td>
                 <td class="to">New York EWR</td>
@@ -138,7 +236,7 @@
             <tr class="inbound">
                 <td class="date">21.05</td>
                 <td class="departtime">19:00</td>
-                <td class="flight">SK 908</td>
+                <td class="flight">SK908</td>
                 <td class="from">New York EWR</td>
                 <td class="arrivaltime">08:20</td>
                 <td class="to">Oslo, Gardermoen</td>
@@ -146,7 +244,7 @@
             <tr class="outbound">
                 <td class="date">26.05</td>
                 <td class="departtime">11:10</td>
-                <td class="flight">SK 907</td>
+                <td class="flight">SK907</td>
                 <td class="from">Oslo, Gardermoen</td>
                 <td class="arrivaltime">13:10</td>
                 <td class="to">New York EWR</td>
@@ -154,15 +252,14 @@
             <tr class="outbound">
                 <td class="date">26.05</td>
                 <td class="departtime">17:28</td>
-                <td class="flight">UA 5154</td>
+                <td class="flight">UA5154</td>
                 <td class="from">New York EWR</td>
                 <td class="arrivaltime">20:38</td>
                 <td class="to">Austin</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Reginald Braithwaite:</td>
@@ -200,9 +297,8 @@
                 <td class="to">Toronto</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Robert Nyman:</td>
@@ -224,9 +320,8 @@
                 <td class="to">n/a</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Jan Lehnardt:</td>
@@ -248,9 +343,8 @@
                 <td class="to">n/a</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Addy Osmani:</td>
@@ -272,9 +366,8 @@
                 <td class="to">London, Heathrow</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Pawel Kozlowski:</td>
@@ -296,9 +389,8 @@
                 <td class="to">Nice, Cote D'Azur</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Rob Hawkes:</td>
@@ -320,9 +412,8 @@
                 <td class="to">London, Heathrow</td>
             </tr>
             <tr class="accommodation">
-                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+                <td class="location" colspan="6">Stays at: Vulcan Scandic Hotel</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Bodil Stokke:</td>
@@ -331,14 +422,12 @@
                 <td class="location" colspan="6">Lives in Oslo</td>
             </tr>
 
-
             <tr class="speaker">
                 <td class="name" colspan="6">Marius Gundersen:</td>
             </tr>
             <tr class="accommodation">
                 <td class="location" colspan="6">Lives in Oslo</td>
             </tr>
-
 
             <tr class="speaker">
                 <td class="name" colspan="6">Magnar Sveen:</td>
