--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -108,7 +108,7 @@
 
         <a name="technical"></a>
         <h2>Technical</h2>
-        <p>The projector is a full HD 1080P projector with a 1920x1080 resolution. On stage there will be HDMI and VGA cable to connect to the projector.</p>
+        <p>The projector is a full HD 1080P projector with a 1920x1080 resolution. On stage there will be HDMI and VGA cable to connect to the projector. If your laptop need a bridge to connect to HDMI or VGA, please bring one.</p>
 
         <p>There will be a sound engineer controlling all sound from the stage and you will be given a small wireless clip-on microphone so your hands are free. If your pressentation requires sound, please let us know before the conference starts so a cable to connect to the PA can be provided for you.</p>
 
