--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -25,43 +25,49 @@
         <a href="#Nightlife">Nightlife</a> |
         <a href="#Sights">Sights</a>
         </p>
-
+<!--
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2><a href=""></a></h2>
+            <p></p>
+        </div>
+-->
         <h2 id="Grub" class="centrify">Grub</h2>
         <div class="separator"></div>
         <div class="place">
             <img class="imageFrame" src="http://www.nighthawkdiner.com/gfx/nitehawk.png" width="140" height="140">
-            <h2>Nighthawk Diner</h2>
-            <p><a href="http://www.nighthawkdiner.com/">Homepage</a><br>
-            <a href="http://maps.google.no/maps?sugexp=chrome,mod%3D17&um=1&hl=en&ie=UTF-8&cid=0,0,15924518314833332275&fb=1&hq=night+hawk+diner&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&gl=no&daddr=Seilduksgata+15,+0553+Oslo&geocode=0,59.925493,10.758753&sa=X&ei=dOaaT4bjBMbNtAbX1ZyUDg&ved=0CBMQngIwAA">Directions</a>.</p>
-            <p>If you feel hung over and still have some money left, this is the place to go to. About as close you can come 
-                to an authentic American diner in Oslo. Amazing food, shakes and pancakes.</p>
+            <h2><a href="http://www.nighthawkdiner.com/">Nighthawk Diner</a></h2>
+            <p>If you feel hung over and still have some money left, this is the place to go to. About as close you can come to an authentic American diner in Oslo. Amazing food, shakes and pancakes.<br>
+            <a href="http://maps.google.no/maps?sugexp=chrome,mod%3D17&um=1&hl=en&ie=UTF-8&cid=0,0,15924518314833332275&fb=1&hq=night+hawk+diner&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&gl=no&daddr=Seilduksgata+15,+0553+Oslo&geocode=0,59.925493,10.758753&sa=X&ei=dOaaT4bjBMbNtAbX1ZyUDg&ved=0CBMQngIwAA">Directions</a></p>
         </div>
         <div class="place">
-            <img class="imageFrame" height="140" width="140" alt="" src="http://media-cdn.tripadvisor.com/media/photo-s/01/fa/8b/8e/hai-cafe-in-oslo-norway.jpg">
-            <h2>Døgnvill Burger</h2>
-            <p>Located right next to the conference venue this is a great place for grabbing a quality burger.</p>
+            <img class="imageFrame" height="140" width="140" alt="" src="http://static.vg.no/mat-og-drikke/restaurantguiden/bilder/778.jpg">
+            <h2><a href="http://www.dognvillburger.no/">Døgnvill Burger</a></h2>
+            <p>Located right next to the conference venue this is a great place for grabbing a real burger. It is one of the top three burger joints in the city.</p>
         </div>
         <div class="place">
             <img class="imageFrame" src="http://s3-media1.ak.yelpcdn.com/bphoto/Gq2fcerjIP2gq0O13vXr7g/ms.jpg" width="140">
             <h2><a href="http://www.nam-fah.com/">Nam Fah</a></h2>
-            <p>Just up the street towards Grünerløkka you find one of the best places for Thai food in Norway. They only do take away and you can expect queues of locals all craving thai food. All at a reasonable price.</p>
+            <p>Just up the street from the venue towards Grünerløkka you find one of the best places for Thai food in Norway. They only do take away and you can expect queues of locals all craving thai food. All at a reasonable price. Grab some food and just head out to one of the parks near by and you'll be in for a treat.<br>
+            <a href="http://www.yelp.com/biz/nam-fah-oslo">Directions</a></p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" height="140" width="140" alt="" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQi0ki4owV9Sh4NNxSLFsvyUbcLolxUaZ7iTL2-HSQe1oNkwIzZkTjaLw">
+            <h2><a href="http://www.villaparadiso.no/">Villa Paradiso</a></h2>
+            <p>If you're into italian-style pizza this is the place to go to. They serve the best pizza in town at a decent price.<br>
+            <a href="https://maps.google.com/maps?ie=UTF-8&daddr=Olaf+Ryes+plass+8,+0552+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.923489,10.757549&cid=0,0,14757481769256393510&hq=Pizza+Paradiso&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo,+Norway">Directions</a></p>
         </div>
         <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="http://profile.ak.fbcdn.net/hprofile-ak-ash2/161956_171199846244007_7890598_n.jpg">
-            <h2>Illegal Burger</h2>
-            <p><a href="http://maps.google.no/maps/place?sugexp=chrome,mod%3D1&um=1&ie=UTF-8&q=illegal+burger&fb=1&gl=no&hq=illegal+burger&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&cid=18012886209070138292">Directions</a>.</p>
-                        <p>One of our favourite burger joints with excellent food at a very decent price. This is fast food at it's best, you'll be 
-                            in and out in ten minutes.</p>
+            <h2><a href="https://www.facebook.com/pages/Illegal-Burger/171199846244007?v=wall">Illegal Burger</a></h2>
+            <p>One of our favourite burger joints with excellent food at a very decent price. This is fast food at it's best, you'll be 
+                in and out in ten minutes.<br>
+            <a href="http://maps.google.no/maps/place?sugexp=chrome,mod%3D1&um=1&ie=UTF-8&q=illegal+burger&fb=1&gl=no&hq=illegal+burger&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&cid=18012886209070138292">Directions</a>.</p>
         </div>
         <div class="place">
-            <img class="imageFrame" src="" width="140" height="140">
+            <img class="imageFrame" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7M4e1Ms6ILs_fGewFuOEvXX5q5nle8UaisIW5FEP4IZTqKl9k" width="140" height="140">
             <h2><a href="http://www.mathallenoslo.no/">Mathallen</a></h2>
             <p>Mathallen is right on the premises of the conference provides you with a lot of amazing food from Norway. The prices are also very Norwegian, so if you're on a tight budget you might want to go elswhere.</p>
-        </div>
-        <div class="place">
-            <img class="imageFrame" height="140" width="140" alt="" src="">
-            <h2>Pizza Paradiso</h2>
-            <p>If you're into italian-style pizza this is the place to go to. They serve the best pizza in town at a decent price.</p>
         </div>
         <h2 id="Beer" class="centrify">Beer</h2>
         <div class="separator"></div>
@@ -71,89 +77,80 @@
             <p>This place has the longest bar counter in the world. Located downstairs in Mathallen right next to the venue. It has a great selection of beers</p>
         </div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>Amundsen</h2>
+            <img class="imageFrame" height="140" width="140" alt="" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQT7YDUmap3DXSFabTUDM9y4T2h0M5mAyz3j0Sm3g7WtKFPeyNaId1K9w">
+            <h2><a href="https://www.facebook.com/pages/Crow-Bar/480223892028632">Crow Bar</a></h2>
+            <p>One of the newest and trendies brewpubs in town. With a great selection botteled and on tap. Located on your way down to the city center from Grünerløkka.<br>
+                <a href="http://www.yelp.com/biz/crowbar-og-bryggeri-oslo">Directions</a></p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR0vbk_Pd548UTWRz-P01RdR1_RO1sMzgN4xul6rExFWnU4YcikHXOKKQ">
+            <h2><a href="http://amundsenbryggeri.no/">Amundsen</a></h2>
             <p>One of the city's widest selection of beers is to be found at Amundsen. This is a bar with it's own micro brewery right there in the bar. Regardless of your taste in beers, you'll be satisfied with what you get here.</p>
         </div>
-        <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p></p>
-        </div>
         <h2 id="Coffee" class="centrify">Coffee</h2>
-        <div class="separator"></div>
+        
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2><a href="http://www.vulkan-oslo.no/default.aspx?menu=89&id=374">Solberg Hansen</a></h2>
-            <p>Some of the most amazing coffe in the world is served right on the premises of the conference. Solberg Hansen provide many of the great coffe spots in Oslo with high quality coffe.</p>
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8esXTTCBtWVECPmmml0EiqX7X5E_7V7zh2gAeYvH3fMyRuz0e">
+            <h2><a href="http://timwendelboe.no/">Tim Wendelboe</a></h2>
+            <p>Tim Wendelboe is The King of Coffe and has a legendary on Grünerløkka where you can get some amazing coffee. It is a micro roastery & espresso bar and is rated as one of the best in the world. Definetly worth a visit, but please don't ask for an espresso in a paper cup.<br>
+                <a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Tim+Wendelboe,+Gr%C3%BCners+gate,+Oslo,+Norge&aq=0&oq=tim+wendelboe&sll=37.0625,-95.677068&sspn=39.184175,78.925781&vpsrc=0&ie=UTF8&hq=Tim+Wendelboe,+Gr%C3%BCners+gate,&hnear=Oslo,+Norway&ll=59.924528,10.755615&spn=0.024259,0.077076&t=m&z=14&iwloc=A&cid=3391370463995849095">Directions</a></p>
+        </div>        
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQW6JZCYEoUtqsfeTW_eRBGyG79v8PV0UHKgCTcdnF2ZiFOUi13LUBdRg">
+            <h2><a href="http://www.javaoslo.no/">Java Espressobar</a></h2>
+            <p>Despite it being named after a dying programming language, this is one of the best places to get coffe in Oslo. Located in beutiful St.Hanshaugen and right next to the <a href="http://www.yelp.com/biz/pascal-oslo-6">Pascal bakery</a> a trip to Java is time well spent.<br>
+                From the conference venu you can just walk up the lovely (but a bit steap) <a href="http://no.wikipedia.org/wiki/Telthusbakken_(Oslo)">Telthus bakken</a> and you'll be in St. Hanshaugen.<br>
+                <a href="http://www.yelp.com/biz/java-espressobar-og-kaffeforretning-oslo">Directions</a></p>
         </div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
+            <img class="imageFrame" width="140" height="140" src="http://media-cdn.tripadvisor.com/media/photo-l/03/d0/49/6f/mathallen-oslo.jpg">
+            <h2><a href="http://www.vulkan-oslo.no/default.aspx?menu=89&id=374">Solberg & Hansen - Mathallen</a></h2>
+            <p>Some of the most amazing coffe in the world is served right on the premises of the conference. Solberg Hansen provide many of the great coffe spots in Oslo with high quality coffe. Just pop by Mathallen and you'll find the place.</p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRHJPEOQbpHhq1Z6xA3KErUvqMsFkOZ8KHDTqu9767S67WYF5uV8g">
             <h2>Stockfleths</h2>
             <p>Stockfleths is a legendary brand synonumous with high quality coffee. They've got a few shops all over Oslo who all provide excellent coffee. The Web Rebels usually does their morning planning at either their <a href="https://www.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=103078545339054642723.000447165583b21de55cd">Tinghuset</a> or <a href="http://maps.google.com/maps?hl=en&bav=on.2,or.r_cp.r_qf.&bvm=bv.43287494,d.bGE&biw=1235&bih=864&um=1&ie=UTF-8&q=stockfleths+grensen&fb=1&hq=stockfleths+grensen&cid=0,0,6678250983037653381&sa=X&ei=2ptAUbLQH-iM4gSLuIHIBw&ved=0CJYBEPwSMAA">Grensen shops</a>.</p>
-        </div>
-        <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p></p>
         </div>
         <h2 id="Nightlife" class="centrify">Nigtlife</h2>
         <div class="separator"></div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>Tilt</h2>
-            <p></p>
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSa5V5NqVu4xILIv48bAB9CK90oqORfeY-H60xwZGlLAkgUuOT7_w">
+            <h2><a href="http://www.tiltoslo.no/">Tilt</a></h2>
+            <p>Tilt is one action packed little place located right next to legendary Rockefeller Music Hall. They've got shuffelboard, arcades and pinball to keep you entertained through the night. In addition to a decent selection of fluids to keep you going.
+                <br><a href="http://www.yelp.com/biz/tilt-oslo">Directions</a></p>
         </div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>Bar Boca</h2>
-            <p>If cocktalis is your thing, then you should make a stop at the famous tiki bar over at Günerløkka. You'll get amazing cocktails in a chill atmosphere.</p>
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTNH_XzVUdUvIPizX_6rCossP-Y8ZbfAKRPb6Cj8CybJR624Flx">
+            <h2><a href="https://www.facebook.com/pages/Bar-Boca/284273994971781?rf=155475754503779">Bar Boca</a></h2>
+            <p>If cocktalis is your thing, then you should make a stop at the famous tiki bar over at Günerløkka. You'll get amazing cocktails in a chill atmosphere of this tiki inspired bar.
+                <br><a href="https://plus.google.com/102753470761695096817/about?hl=en">Directions/<a></p>
         </div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>Parktheateret</h2>
-            <p></p>
-        </div>
-        <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p></p>
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTySG1-3XhImk9U_JRr8y-YaOeuLcpB1EhbIyoEiPcKXMIevQ6KkQMJWrc">
+            <h2><a href="http://www.parkteatret.no/">Parkteateret</a></h2>
+            <p>Parkteatret Scene is an old cinema from 1907 now functioning mainly as a concert venue with a capacity of 500. Our main focus is pop/rock, but the venue is also great for indie, bluegrass, country, rockabilly, jazz and blues. We often have either a concert or disco for children on Sundays. Apart from concerts, theres often documentary films or other kinds of movie nights on Wednesdays, often with debates or discussions on the topics raised.<br>
+                <a href="https://plus.google.com/111196340555251862088/about?hl=en">Directions</a></p>
         </div>
         <h2 id="Sights" class="centrify">Sights</h2>
         <div class="separator"></div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p></p>
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQhtY12-tVI8CM7ALqktAl400l5RJ6hoIpsKNd29MUC98nwN8Su">
+            <h2><a href="http://www.munch.museum.no/Dokument/For-English-visitors">The Munch Museum</a></h2>
+            <p>This year marks the 150 year aniversary for one of the worlds greatest painters, Edward Munch. The Munch Museum has the largest collection of his work in the world and it has gotten a touch up in relation to the anicerary. 
+                <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=T%C3%B8yengata+53,+0578+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.917050,10.775182&cid=0,0,7295538454545109531&hq=munch+museet&hnear=munch+museet">Directions</a></p>
         </div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>Opera</h2>
-            <p></p>
-        </div>
-        <h2 id="" class="centrify"></h2>
-        <div class="separator"></div>
-        <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p></p>
+            <img class="imageFrame" width="140" height="140" src="http://t1.gstatic.com/images?q=tbn:ANd9GcQBy-urxmDclKz4bwwCjH8tvVnnomyt5L2zeuo2I_52bpB6APl8LA">
+            <h2><a href="http://www.operaen.no/en/">Oslo Opera House</a></h2>
+            <p>The Norwegian Opera house is located on the old stomping grounds of Norwegians going on the ferry to Denmark in order to get shit faced drunk. These days the permises hosts one of Oslo's few architectural masterpieces. You can stroll on it's marbeled roof and get a great look at the city.<br>
+                <a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirsten+Flagstads+Plass+1,+0150+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.907593,10.752595&cid=0,0,2069025550397265425&hq=opera+house&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo,+Norway">Directions</a></p>
         </div>
         <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>The Opera</h2>
-            <p>Visiting the Opera on a sunny day is very much recomended. It's architecture and location makes for a nice stop when walking arround the city.</p>
-        </div>
-        <h2 id="" class="centrify"></h2>
-        <div class="separator"></div>
-        <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2>Günerløkka</h2>
-            <p>For some time this has been the hippest part of Oslo with it's shops, bars and restaurants all being amazing. This is the palce where everyone</p>
-        </div>
-        <div class="place">
-            <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p></p>
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQXQ9Eww7QEERIt-kOhxvPTq3ZRBZzBsxMzlgFqGHW1wjFkf3sMVQ">
+            <h2><a href="">Frogner Park</a></h2>
+            <p>The Frogner Park (Norwegian: Frognerparken) is a public park located in the borough of Frogner. The Frogner Park contains, in its present centre, the world famous Vigeland Sculpture Arrangement designed by Gustav Vigeland. Frogner Park consists of various bridges, fountains and a well known picnic area, popular in the summer for games and relaxation. It also contains both Frognerbadet and Frogner Stadium. The park is the largest park in the city and covers 45 hectares.<br>It's a great place to just hang out and check out some crazy sculptures and enjoy the sights.
+                <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirkeveien/Middelthuns+gate,+0268+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.924910,10.707039&cid=0,0,953405644286555817&hq=frogner+parken">Directions</a></p>
         </div>
     </article>
 
