fixed numerous spelling mistakes

--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -16,7 +16,7 @@
     <article class="wrap">
         <h1>Oslo surival guide for Web Rebels!</h1>
         <p>Oslo has consistently been ranked as one of the most expensive cities on the planet. Unfortunately this makes it hard for people coming here as everything is really expensive.</p>
-        <p>However, there are actually ways of visiting Oslo without getting financially ruined. This iswhat we wanted all of you to know, because we do care about every one of our attendants. You'll find on this page some of the cheap alternatives along with other epic places you should visit if you spend a couple of extra days in Oslo. </p>
+        <p>However, there are actually ways of visiting Oslo without getting financially ruined. This is what we wanted all of you to know, because we do care about every one of our attendants. You'll find on this page some of the cheap alternatives along with other epic places you should visit if you spend a couple of extra days in Oslo. </p>
 
         <p class="borderlessMenu menu">
         <a href="#Grub">Grub</a> |
@@ -60,14 +60,14 @@
         <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="http://profile.ak.fbcdn.net/hprofile-ak-ash2/161956_171199846244007_7890598_n.jpg">
             <h2><a href="https://www.facebook.com/pages/Illegal-Burger/171199846244007?v=wall">Illegal Burger</a></h2>
-            <p>One of our favourite burger joints with excellent food at a very decent price. This is fast food at it's best, you'll be 
+            <p>One of our favorite burger joints with excellent food at a very decent price. This is fast food at it's best, you'll be 
                 in and out in ten minutes.<br>
             <a href="http://maps.google.no/maps/place?sugexp=chrome,mod%3D1&um=1&ie=UTF-8&q=illegal+burger&fb=1&gl=no&hq=illegal+burger&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&cid=18012886209070138292">Directions</a>.</p>
         </div>
         <div class="place">
             <img class="imageFrame" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7M4e1Ms6ILs_fGewFuOEvXX5q5nle8UaisIW5FEP4IZTqKl9k" width="140" height="140">
             <h2><a href="http://www.mathallenoslo.no/">Mathallen</a></h2>
-            <p>Mathallen is right on the premises of the conference provides you with a lot of amazing food from Norway. The prices are also very Norwegian, so if you're on a tight budget you might want to go elswhere.</p>
+            <p>Mathallen is right on the premises of the conference provides you with a lot of amazing food from Norway. The prices are also very Norwegian, so if you're on a tight budget you might want to go elsewhere.</p>
         </div>
         <h2 id="Beer" class="centrify">Beer</h2>
         <div class="separator"></div>
@@ -79,7 +79,7 @@
         <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQT7YDUmap3DXSFabTUDM9y4T2h0M5mAyz3j0Sm3g7WtKFPeyNaId1K9w">
             <h2><a href="https://www.facebook.com/pages/Crow-Bar/480223892028632">Crow Bar</a></h2>
-            <p>One of the newest and trendies brewpubs in town. With a great selection botteled and on tap. Located on your way down to the city center from Grünerløkka.<br>
+            <p>One of the newest and trendies brewpubs in town. With a great selection bottled and on tap. Located on your way down to the city center from Grünerløkka.<br>
                 <a href="http://www.yelp.com/biz/crowbar-og-bryggeri-oslo">Directions</a></p>
         </div>
         <div class="place">
@@ -98,8 +98,8 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQW6JZCYEoUtqsfeTW_eRBGyG79v8PV0UHKgCTcdnF2ZiFOUi13LUBdRg">
             <h2><a href="http://www.javaoslo.no/">Java Espressobar</a></h2>
-            <p>Despite it being named after a dying programming language, this is one of the best places to get coffe in Oslo. Located in beutiful St.Hanshaugen and right next to the <a href="http://www.yelp.com/biz/pascal-oslo-6">Pascal bakery</a> a trip to Java is time well spent.<br>
-                From the conference venu you can just walk up the lovely (but a bit steap) <a href="http://no.wikipedia.org/wiki/Telthusbakken_(Oslo)">Telthus bakken</a> and you'll be in St. Hanshaugen.<br>
+            <p>Despite it being named after a dying programming language, this is one of the best places to get coffe in Oslo. Located in beautiful St.Hanshaugen and right next to the <a href="http://www.yelp.com/biz/pascal-oslo-6">Pascal bakery</a> a trip to Java is time well spent.<br>
+                From the conference venu you can just walk up the lovely (but a bit steep) <a href="http://no.wikipedia.org/wiki/Telthusbakken_(Oslo)">Telthus bakken</a> and you'll be in St. Hanshaugen.<br>
                 <a href="http://www.yelp.com/biz/java-espressobar-og-kaffeforretning-oslo">Directions</a></p>
         </div>
         <div class="place">
@@ -110,20 +110,20 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRHJPEOQbpHhq1Z6xA3KErUvqMsFkOZ8KHDTqu9767S67WYF5uV8g">
             <h2>Stockfleths</h2>
-            <p>Stockfleths is a legendary brand synonumous with high quality coffee. They've got a few shops all over Oslo who all provide excellent coffee. The Web Rebels usually does their morning planning at either their <a href="https://www.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=103078545339054642723.000447165583b21de55cd">Tinghuset</a> or <a href="http://maps.google.com/maps?hl=en&bav=on.2,or.r_cp.r_qf.&bvm=bv.43287494,d.bGE&biw=1235&bih=864&um=1&ie=UTF-8&q=stockfleths+grensen&fb=1&hq=stockfleths+grensen&cid=0,0,6678250983037653381&sa=X&ei=2ptAUbLQH-iM4gSLuIHIBw&ved=0CJYBEPwSMAA">Grensen shops</a>.</p>
+            <p>Stockfleths is a legendary brand synonymous with high quality coffee. They've got a few shops all over Oslo who all provide excellent coffee. The Web Rebels usually does their morning planning at either their <a href="https://www.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=103078545339054642723.000447165583b21de55cd">Tinghuset</a> or <a href="http://maps.google.com/maps?hl=en&bav=on.2,or.r_cp.r_qf.&bvm=bv.43287494,d.bGE&biw=1235&bih=864&um=1&ie=UTF-8&q=stockfleths+grensen&fb=1&hq=stockfleths+grensen&cid=0,0,6678250983037653381&sa=X&ei=2ptAUbLQH-iM4gSLuIHIBw&ved=0CJYBEPwSMAA">Grensen shops</a>.</p>
         </div>
-        <h2 id="Nightlife" class="centrify">Nigtlife</h2>
+        <h2 id="Nightlife" class="centrify">Nightlife</h2>
         <div class="separator"></div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSa5V5NqVu4xILIv48bAB9CK90oqORfeY-H60xwZGlLAkgUuOT7_w">
             <h2><a href="http://www.tiltoslo.no/">Tilt</a></h2>
-            <p>Tilt is one action packed little place located right next to legendary Rockefeller Music Hall. They've got shuffelboard, arcades and pinball to keep you entertained through the night. In addition to a decent selection of fluids to keep you going.
+            <p>Tilt is one action packed little place located right next to legendary Rockefeller Music Hall. They've got shuffleboard, arcades and pinball to keep you entertained through the night. In addition to a decent selection of fluids to keep you going.
                 <br><a href="http://www.yelp.com/biz/tilt-oslo">Directions</a></p>
         </div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTNH_XzVUdUvIPizX_6rCossP-Y8ZbfAKRPb6Cj8CybJR624Flx">
             <h2><a href="https://www.facebook.com/pages/Bar-Boca/284273994971781?rf=155475754503779">Bar Boca</a></h2>
-            <p>If cocktalis is your thing, then you should make a stop at the famous tiki bar over at Günerløkka. You'll get amazing cocktails in a chill atmosphere of this tiki inspired bar.
+            <p>If cocktails is your thing, then you should make a stop at the famous tiki bar over at Günerløkka. You'll get amazing cocktails in a chill atmosphere of this tiki inspired bar.
                 <br><a href="https://plus.google.com/102753470761695096817/about?hl=en">Directions/<a></p>
         </div>
         <div class="place">
@@ -137,13 +137,13 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQhtY12-tVI8CM7ALqktAl400l5RJ6hoIpsKNd29MUC98nwN8Su">
             <h2><a href="http://www.munch.museum.no/Dokument/For-English-visitors">The Munch Museum</a></h2>
-            <p>This year marks the 150 year aniversary for one of the worlds greatest painters, Edward Munch. The Munch Museum has the largest collection of his work in the world and it has gotten a touch up in relation to the anicerary. 
+            <p>This year marks the 150 year anniversary for one of the worlds greatest painters, Edward Munch. The Munch Museum has the largest collection of his work in the world and it has gotten a touch up in relation to the anniversary. 
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=T%C3%B8yengata+53,+0578+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.917050,10.775182&cid=0,0,7295538454545109531&hq=munch+museet&hnear=munch+museet">Directions</a></p>
         </div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="http://t1.gstatic.com/images?q=tbn:ANd9GcQBy-urxmDclKz4bwwCjH8tvVnnomyt5L2zeuo2I_52bpB6APl8LA">
             <h2><a href="http://www.operaen.no/en/">Oslo Opera House</a></h2>
-            <p>The Norwegian Opera house is located on the old stomping grounds of Norwegians going on the ferry to Denmark in order to get shit faced drunk. These days the permises hosts one of Oslo's few architectural masterpieces. You can stroll on it's marbeled roof and get a great look at the city.<br>
+            <p>The Norwegian Opera house is located on the old stomping grounds of Norwegians going on the ferry to Denmark in order to get shit faced drunk. These days the permises hosts one of Oslo's few architectural masterpieces. You can stroll on it's marbled roof and get a great look at the city.<br>
                 <a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirsten+Flagstads+Plass+1,+0150+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.907593,10.752595&cid=0,0,2069025550397265425&hq=opera+house&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo,+Norway">Directions</a></p>
         </div>
         <div class="place">
