added fork badge and deployed new verison

--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -20,7 +20,7 @@
 
         <p class="borderlessMenu menu">
         <a href="#Grub">Grub</a> |
-        <a href="#Beer">Beer</a> |
+        <a href="#Grog">Grog</a> |
         <a href="#Coffee">Coffee</a> |
         <a href="#Nightlife">Nightlife</a> |
         <a href="#Sights">Sights</a>
@@ -69,7 +69,7 @@
             <h2><a href="http://www.mathallenoslo.no/">Mathallen</a></h2>
             <p>Mathallen is right on the premises of the conference provides you with a lot of amazing food from Norway. The prices are also very Norwegian, so if you're on a tight budget you might want to go elsewhere.</p>
         </div>
-        <h2 id="Beer" class="centrify">Beer</h2>
+        <h2 id="Grog" class="centrify">Grog</h2>
         <div class="separator"></div>
         <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRlq-tP60hP8trJmCwLb46cBERABqsOHXsqGytTOuw-YAV6A7-izA">
@@ -153,6 +153,8 @@
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirkeveien/Middelthuns+gate,+0268+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.924910,10.707039&cid=0,0,953405644286555817&hq=frogner+parken">Directions</a></p>
         </div>
     </article>
+    <!--
+    <a href="https://github.com/webrebels/web-rebels-2013/blob/master/views/oslo.ejs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>-->
 
     <% include snips/footer.ejs %>
 
