adding guide info to location page

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -16,8 +16,10 @@
     <article class="wrap">
 
         <p>
-          Everything related to the conference happens within a 200m radius of the venue. The pre-party, the conference, the conference party and <a href="/openmic">Open Mic Night</a> are all taking place within a few metres of the venue.
+          Everything related to the conference happens within a 200m radius of the venue. The pre-party, the conference, the conference party and <a href="../openmic">Open Mic Night</a> are all taking place within a few metres of the venue.
         </p>
+        <h2><a href="../oslo">Oslo survival guide!</a></h2>
+        <p>Staying for an extra couple of days? New to our beloved city? Check out <a href="../oslo">the little guide</a> we have put together to help you out!</p>        
 
         <div class="separator"></div>
 
