--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -178,6 +178,7 @@
             <p>The Frogner Park (Norwegian: Frognerparken) is a public park located in the borough of Frogner. The Frogner Park contains, in its present centre, the world famous Vigeland Sculpture Arrangement designed by Gustav Vigeland. Frogner Park consists of various bridges, fountains and a well known picnic area, popular in the summer for games and relaxation. It also contains both Frognerbadet and Frogner Stadium. The park is the largest park in the city and covers 45 hectares.<br>It's a great place to just hang out and check out some crazy sculptures and enjoy the sights.
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirkeveien/Middelthuns+gate,+0268+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.924910,10.707039&cid=0,0,953405644286555817&hq=frogner+parken">Directions</a></p>
         </div>
+        <div class="separator"></div>
         <p>Feel that some place is missing? <a href="https://github.com/webrebels/web-rebels-2013/blob/master/views/oslo.ejs">Submit a pull request on GitHub</a> and we might add it!</p>
         <p>This is just a list of places we put together and none of the places are associated with the Web Rebels or get paid to listed.</p>
     </article>
