adding shops section

--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -23,7 +23,8 @@
         <a href="#Grog">Grog</a> |
         <a href="#Coffee">Coffee</a> |
         <a href="#Nightlife">Nightlife</a> |
-        <a href="#Sights">Sights</a>
+        <a href="#Sights">Sights</a> |
+        <a href="#Shops">Shops</a>
         </p>
 <!--
         <div class="place">
@@ -164,8 +165,6 @@
             <p>It is the home of the world’s oldest complete primate skeleton <a href="http://www.nhm.uio.no/english/visiting/geological-museum/ida/">Ida</a>, makes for a excellent lazy Sunday experience. With it's <a href="http://www.nhm.uio.no/english/visiting/botanical-garden/">Botanical garden</a>, <a href="http://www.nhm.uio.no/english/visiting/zoological-museum/">Zoological</a> and <a href="http://www.nhm.uio.no/english/visiting/geological-museum/">Geological</a> you are certain to have an educational time. The museum is located in lovely Tøyen and it is close to the Munch Museum and the Tøyen park.<br><a href="http://www.nhm.uio.no/english/visiting/map/">Directions</a>
                 </p>
         </div>
-
-        
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="http://t1.gstatic.com/images?q=tbn:ANd9GcQBy-urxmDclKz4bwwCjH8tvVnnomyt5L2zeuo2I_52bpB6APl8LA">
             <h2><a href="http://www.operaen.no/en/">Oslo Opera House</a></h2>
@@ -178,6 +177,23 @@
             <p>The Frogner Park (Norwegian: Frognerparken) is a public park located in the borough of Frogner. The Frogner Park contains, in its present centre, the world famous Vigeland Sculpture Arrangement designed by Gustav Vigeland. Frogner Park consists of various bridges, fountains and a well known picnic area, popular in the summer for games and relaxation. It also contains both Frognerbadet and Frogner Stadium. The park is the largest park in the city and covers 45 hectares.<br>It's a great place to just hang out and check out some crazy sculptures and enjoy the sights.
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirkeveien/Middelthuns+gate,+0268+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.924910,10.707039&cid=0,0,953405644286555817&hq=frogner+parken">Directions</a></p>
         </div>
+
+        <h2 id="Shops" class="centrify">Shops</h2>
+        <div class="separator"></div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5Sew6JMfv333ySCXVC5ESEP8bSQvIKouw6Q1qcdgt7Tl0GsQO3Q">
+            <h2><a href="http://www.tronsmo.no/">Tronsmo</a></h2>
+            <p>A true gem is this independent bookstore located in Tullinløkka right next to the National Gallery. They have an amazing collection of books in multiple languages. From beat poetry to philosophy. From books about street art to books about politics. In the basement you'll find a wide range of comics in different genres. This is the only bookstore you need to visit while staying here.<br>
+                <a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kristian+Augusts+gate+19,+0164+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.917005,10.736858&cid=0,0,9339884691026726436&hq=tronsmo">Directions</a></p>
+        </div>
+        
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcShtfqf3ViByF5PxQCcdFTK4W-qeI3VlzUFfkWqNaLPuTYkoXcauQ">
+            <h2><a href="http://www.bigdipper.no/">Big Dipper Records</a></h2>
+            <p>Vinly addicts will get their fix in this records store which only caters vinyl. You can look trough countless rows of new releases and old gems. It's nicely place on the way from the venue to down town Oslo.<br>
+            <a href="https://plus.google.com/106847798312361144473/about?hl=en">Directions</a> </p>
+        </div>
+
         <div class="separator"></div>
         <p>Feel that some place is missing? <a href="https://github.com/webrebels/web-rebels-2013/blob/master/views/oslo.ejs">Submit a pull request on GitHub</a> and we might add it!</p>
         <p>This is just a list of places we put together and none of the places are associated with the Web Rebels or get paid to listed.</p>
