Added Jans abstract

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -128,7 +128,7 @@
             <tr>
                 <td class="time">13:30</td>
                 <td class="title"><a href="/speakers/#jan">Jan Lehnardt</a></td>
-                <td class="additional">tba</td>
+                <td class="additional">Rethinking Web Development: noBackend &amp; Offline First</td>
             </tr>
             <tr>
                 <td class="time">14:15</td>
