--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -126,8 +126,12 @@
             <h2>Jan Lehnardt</h2>
             <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="http://jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>Rethinking Web Development: noBackend &amp; Offline First</h3>
+            <p>When building anything, one needs to keep a few things in mind to ensure success. Two primary ones are:</p>
+            <p>1. The target audience.<br>2. Real-world constraints.</p>
+            <p>The current state of web development ignores these two at everyone’s peril.</p>
+            <p>This talk invites you to rethink modern web development a little bit, just enough to build a better technical foundation for everyone to use.</p>
+            <p>We will be looking at freeing frond-end developers from their shackles of backend technology and the offline-first approach to build better, more enjoyable, more functional and more mobile-friendly user experiences.</p>
         </div>
 
         <div class="separator"></div>
