fixed spelling and added pushwagner

--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -93,7 +93,7 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8esXTTCBtWVECPmmml0EiqX7X5E_7V7zh2gAeYvH3fMyRuz0e">
             <h2><a href="http://timwendelboe.no/">Tim Wendelboe</a></h2>
-            <p>Tim Wendelboe is The King of Coffe and has a legendary on Grünerløkka where you can get some amazing coffee. It is a micro roastery & espresso bar and is rated as one of the best in the world. Definetly worth a visit, but please don't ask for an espresso in a paper cup.<br>
+            <p>Tim Wendelboe is The King of Coffe and has a legendary shop on Grünerløkka where you can get some amazing coffee. It is a micro roastery & espresso bar which is rated as one of the best in the world. Definetly worth a visit, but please don't ask for an espresso in a paper cup.<br>
                 <a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Tim+Wendelboe,+Gr%C3%BCners+gate,+Oslo,+Norge&aq=0&oq=tim+wendelboe&sll=37.0625,-95.677068&sspn=39.184175,78.925781&vpsrc=0&ie=UTF8&hq=Tim+Wendelboe,+Gr%C3%BCners+gate,&hnear=Oslo,+Norway&ll=59.924528,10.755615&spn=0.024259,0.077076&t=m&z=14&iwloc=A&cid=3391370463995849095">Directions</a></p>
         </div>        
         <div class="place">
@@ -165,6 +165,12 @@
             <p>It is the home of the world’s oldest complete primate skeleton <a href="http://www.nhm.uio.no/english/visiting/geological-museum/ida/">Ida</a>, makes for a excellent lazy Sunday experience. With it's <a href="http://www.nhm.uio.no/english/visiting/botanical-garden/">Botanical garden</a>, <a href="http://www.nhm.uio.no/english/visiting/zoological-museum/">Zoological</a> and <a href="http://www.nhm.uio.no/english/visiting/geological-museum/">Geological</a> you are certain to have an educational time. The museum is located in lovely Tøyen and it is close to the Munch Museum and the Tøyen park.<br><a href="http://www.nhm.uio.no/english/visiting/map/">Directions</a>
                 </p>
         </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQuErQmlBYNRWEeworPom41Vzb-hGT_k1KdlTAo12fdoYI-vVaV">
+            <h2><a href="http://www.pushwagner.no/?id=1&lang=2">Pushwagner Gallery</a></h2>
+            <p>The amazing Oslo artist Pushwagner has opened a gallery in Tjuvholmen. 
+                Pushwagner, one of the most important Norwegian contemporary artists, gained a wide international recognition in the past years. His work is hugely inspired by the city of Oslo. <br><a href="https://maps.google.no/maps?ie=UTF8&f=d&daddr=Pushwagner,+Tjuvholmen+all%C3%A9+10,+0252+Oslo&geocode=CaTEC4Ane24YFTkhkgMdYZ2jACH5qLZI_VHLdA&gl=NO&hl=en">Directions</a></p>
+        </div>        
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="http://t1.gstatic.com/images?q=tbn:ANd9GcQBy-urxmDclKz4bwwCjH8tvVnnomyt5L2zeuo2I_52bpB6APl8LA">
             <h2><a href="http://www.operaen.no/en/">Oslo Opera House</a></h2>
