removed IE competition

--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -24,6 +24,7 @@
         <a href="#Coffee">Coffee</a> |
         <a href="#Nightlife">Nightlife</a> |
         <a href="#Sights">Sights</a> |
+        <a href="#Hangout">Hangout</a> |
         <a href="#Shops">Shops</a>
         </p>
 <!--
@@ -182,6 +183,15 @@
             <h2><a href="">Frogner Park</a></h2>
             <p>The Frogner Park (Norwegian: Frognerparken) is a public park located in the borough of Frogner. The Frogner Park contains, in its present centre, the world famous Vigeland Sculpture Arrangement designed by Gustav Vigeland. Frogner Park consists of various bridges, fountains and a well known picnic area, popular in the summer for games and relaxation. It also contains both Frognerbadet and Frogner Stadium. The park is the largest park in the city and covers 45 hectares.<br>It's a great place to just hang out and check out some crazy sculptures and enjoy the sights.
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirkeveien/Middelthuns+gate,+0268+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.924910,10.707039&cid=0,0,953405644286555817&hq=frogner+parken">Directions</a></p>
+        </div>
+        <h2 id="Hangout" class="centrify">Hangout</h2>
+        <div class="separator"></div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTscP7GnfwmkHVUXFNHv9xFzt0eCNzrgBYUDjn0MleM9Jm1Sl5sJW9SaA">
+            <h2><a href="http://meshnorway.com/">Mesh & Mesh Café</a></h2>
+            <p>Mesh is an entrepreneur co-op right in the heart of Oslo. They provide services to accelerate modern entrepreneurs, spaces to connect creators at various stages, and a community where innovators can feel at home.<br>
+            <a href="">The Mesh Café</a> was created to give the whole entrepreneurial community a place to meet, socialize, host events, and connect. The prices cater to bootstrappers, and the atmosphere is perfect for lunch, breakfast, or just haning out.<br>
+            <a href="https://plus.google.com/102553550945579195630/about?hl=en">Directions</a></p>
         </div>
 
         <h2 id="Shops" class="centrify">Shops</h2>
